<resources>
    <string name="app_name">Tanamin</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_plant">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_desc">Aplikasi yang bikin kamu anti gagal panen, Panen hasilnya sekarang!</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="welcome_tittle">Selamat datang di Tanamin</string>
    <string name="login_desc">Silakan masuk dengan akun yang telah terdaftar</string>
    <string name="register_desc">Lengkapi dulu data dirimu dibawah ini, ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="hint_email">Masukkan email kamu</string>
    <string name="hint_password">Masukkan password kamu</string>
    <string name="hint_name">Masukkan nama kamu</string>
    <string name="home_slogan">Rawat tanamanmu disini</string>
    <string name="menu">Menu</string>
    <string name="news">Berita</string>
    <string name="article">Artikel</string>
    <string name="rice_capt">Diagnosa tanaman Padi</string>
    <string name="cassava_capt">Diagnosa tanaman Singkong</string>
    <string name="tomato_capt">Diagnosa tanaman Tomat</string>
    <string name="vegetable_capt">Identifikasi jenis sayuran</string>
    <string name="edit">Edit Profil</string>
    <string name="language">Pilih Bahasa</string>
    <string name="credit">Credit</string>
    <string name="about">Tentang</string>
    <string name="logout">Keluar</string>
    <string name="plant_empty">Tanaman belum ditambahkan</string>
    <string name="scan">Scan Disini</string>
    <string name="home_capt">Pilih tanamanmu</string>
    <string name="rice">Padi</string>
    <string name="cassava">Singkong</string>
    <string name="vegetables">Sayuran</string>
    <string name="tomato">Tomat</string>
    <string name="bannerTwo_Capt">Cegah\nPenyakit\nTanaman</string>
    <string name="bannerOne_Capt">Rawat\nTanaman Kamu\nDisini</string>
    <string name="bannerThree_Capt">Anti\nGagal Panen</string>
    <string name="news_tittle_activity">Tanamin News</string>
    <string name="search">Cari jenis penyakit tanaman</string>
    <string name="logout_capt">Kamu masih bisa masuk aplikasi lagi nanti</string>
    <string name="logout_sure">Apakah kamu yakin ingin keluar dari aplikasi?</string>
    <string name="mantap">Mantap!</string>
    <string name="register_success">Pendaftaran akun kamu berhasil. Silakan lanjutkan ke halaman login</string>
    <string name="Article_capt">Kenali berbagai jenis penyakit tanaman yang ada disini</string>
    <string name="news_capt">Kumpulan berita terbaik khusus untuk kamu</string>
    <string name="tittle_capt">Pilih tanaman yang akan kamu diagnosa dan identifikasi</string>
    <string name="cam_help">Ambil gambar secara detail pada daun tanaman padi, singkong, tomat, atau sayuran. Pastikan foto yang kamu ambil sesuai dengan perintah</string>
    <string name="help_tittle">Cara Mendiagnosa Tanaman</string>
    <string name="kamera">Kamera :</string>
    <string name="galeri">Galeri :</string>
    <string name="gallery_help">Pilih gambar daun tanaman padi, singkong, tomat, atau sayuran di galeri kamu. Pastikan gambar sesuai dengan perintah.</string>
    <string-array name="news_tittle">
        <item>Petani Budidayakan Padi Jenis Srinuk, Ganjar Dukung Penuh</item>
        <item>Antisipasi Climate Change, Kementan Gelar Pertanian Cerdas Iklim</item>
        <item>Petik Padi, Tradisi Petani Plumbungan Sragen Awali Panen</item>
        <item>Sandiaga Uno: Kemenparekraf Siap Dampingi UMKM Kampung Singkong Argowiyoto Salatiga</item>
        <item>Kurangi Ketergantungan Terigu, Pemprov Lampung Siap Geliatkan Tepung Singkong</item>
        <item>Kendalikan Hama Penyakit pada Singkong, Ahli IPB University Ungkap Pentingnya Mengelola Ekosistem</item>
        <item>Pemkab Karawang Dorong Upaya Swasembada Sayuran</item>
        <item>Harga Sayuran di Trenggalek Naik</item>
        <item>Harga Tomat Melejit Naik 2 Kali Lipat, Rp. 20 Ribu per Kilo di Pasar Mardika Ambon</item>
    </string-array>
    <string-array name="news_image">
        <item>@drawable/rice_news_one</item>
        <item>@drawable/rice_news_two</item>
        <item>@drawable/rice_news_three</item>
        <item>@drawable/singkong_news_one</item>
        <item>@drawable/singkong_news_two</item>
        <item>@drawable/singkong_news_three</item>
        <item>@drawable/vegetables_news_one</item>
        <item>@drawable/vegetables_news_two</item>
        <item>@drawable/tomato_news_one</item>
    </string-array>
</resources>