<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:text="@string/register"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signup_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/register_desc"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />

        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="315dp"
            android:layout_height="188dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:src="@drawable/signup_image_one" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_text_input_user_name"
            app:layout_constraintTop_toBottomOf="@+id/login_text_input_user_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainlayoutemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_text_input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/constrainlayoutemail"
                app:layout_constraintStart_toStartOf="@id/constrainlayoutemail"
                app:layout_constraintBottom_toBottomOf="@id/constrainlayoutemail"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_text_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:ems="10"
                    tools:ignore="SpeakableTextPresentCheck"

                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="48dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainlayoutnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_text_input_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/ic_baseline_notes_24"
                app:layout_constraintBottom_toBottomOf="@id/constrainlayoutnama"
                app:layout_constraintTop_toTopOf="@id/constrainlayoutnama"
                app:layout_constraintStart_toStartOf="@id/constrainlayoutnama"
                app:layout_constraintEnd_toEndOf="@id/constrainlayoutnama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_text_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_name"
                    android:ems="10"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="User Name"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="48dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainlayoutusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_text_input_user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/ic_baseline_assignment_24"
                app:layout_constraintBottom_toBottomOf="@id/constrainlayoutusername"
                app:layout_constraintTop_toTopOf="@id/constrainlayoutusername"
                app:layout_constraintStart_toStartOf="@id/constrainlayoutusername"
                app:layout_constraintEnd_toEndOf="@id/constrainlayoutusername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_text_edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Masukkan user name kamu"
                    android:ems="10"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_text_input_password"
            app:layout_constraintTop_toBottomOf="@+id/login_text_input_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainlayoutpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_text_input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/constrainlayoutpassword"
                app:layout_constraintStart_toStartOf="@+id/constrainlayoutpassword"
                app:layout_constraintBottom_toBottomOf="@+id/constrainlayoutpassword"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_text_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_password"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.tanamin.ui.custom.dark_green_button
            android:id="@+id/signup_btn_signup"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round_button_green"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/copyrightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="© 2022 TANAMIN"
            android:textSize="14sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>